--- a/moulali_portfolio/portfolio1.html
+++ b/moulali_portfolio/portfolio1.html
@@ -25,7 +25,7 @@
             <h1>Hello, I'm <span>Shaik Moulali</span></h1>
             <h2>Front-end Developer</h2>
             <p>With knowledge in web development and design, I offer the best projects resulting in quality work.</p>
-            <a href="#contact" class="btn-primary">Hire Me</a>
+            <a href="https://drive.google.com/file/d/1EjLIVZd26HpJOxpxJE-igNi877FkqvYy/view?usp=sharing" class="btn-primary">Hire Me</a>
           </div>
           <div class="image1">
             <div class="Circle">
@@ -130,7 +130,7 @@
             <div class="card">
               <h3>Caluclator App</h3>
               <p>An interactive Caluclator application for task management. Built using Java script.</p>
-              <button class="calci"><a href="javascript5.html">Caluclator App</a></button>
+              <button class="calci"><a href="https://rad-dodol-0858f0.netlify.app/caluclator/javascript5.html">Caluclator App</a></button>
             </div>
             <div class="card">
               <h3>E-commerce Backend</h3>
